--- a/arch/arm/configs/MiSTer_defconfig
+++ b/arch/arm/configs/MiSTer_defconfig
@@ -2472,7 +2472,7 @@ CONFIG_REGULATOR_FIXED_VOLTAGE=y
 # CONFIG_REGULATOR_VCTRL is not set
 # CONFIG_RC_CORE is not set
 # CONFIG_MEDIA_CEC_SUPPORT is not set
-# CONFIG_MEDIA_SUPPORT is not set
+# CONFIG_MEDIA_SUPPORT=y
 
 #
 # Graphics support
